--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -12,5 +12,5 @@
   command: openssl req -new -nodes -x509 -subj "/C=BY/ST=Minsk/L=Minsk/O=IT/CN={{ server_hostname }}" -days 3650 -keyout /etc/nginx/certs/server.key -out /etc/nginx/certs/server.crt -extensions v3_ca creates=/etc/nginx/certs/server.crt
 
 - name: Copy nginx configuration for wordpress
-  template: src=default.conf dest=/etc/nginx/conf.d/default.conf
+  template: src=default.conf.j2 dest=/etc/nginx/conf.d/default.conf
   notify: restart nginx
